Prepare for GitHub Pages deployment

--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,9 @@
   <title>mds</title>
   <link rel="manifest" href="manifest.json">
 
+  <meta name="google-signin-client_id" content="694652953963-nkj9h968feqjgr8og8jchfg8j0fhddjt.apps.googleusercontent.com">
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+
   <script>
     // The value below is injected by flutter build, do not touch.
     const serviceWorkerVersion = null;
