--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -14,7 +15,24 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+  <!-- Dynamic base href for GitHub Pages compatibility -->
+  <base href="/">
+  <script>
+    (function () {
+      var path = window.location.pathname;
+      var base = document.querySelector('base');
+      if (path.endsWith('/')) {
+        base.href = path;
+      } else {
+        var lastSlash = path.lastIndexOf('/');
+        if (lastSlash !== -1 && path.substring(lastSlash).indexOf('.') !== -1) {
+          base.href = path.substring(0, lastSlash + 1);
+        } else {
+          base.href = path + '/';
+        }
+      }
+    })();
+  </script>
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -27,12 +45,13 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>mds</title>
   <link rel="manifest" href="manifest.json">
 
-  <meta name="google-signin-client_id" content="694652953963-nkj9h968feqjgr8og8jchfg8j0fhddjt.apps.googleusercontent.com">
+  <meta name="google-signin-client_id"
+    content="694652953963-nkj9h968feqjgr8og8jchfg8j0fhddjt.apps.googleusercontent.com">
   <script src="https://accounts.google.com/gsi/client" async defer></script>
 
   <script>
@@ -42,16 +61,17 @@
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
+
 <body>
   <script>
-    window.addEventListener('load', function(ev) {
+    window.addEventListener('load', function (ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
         },
-        onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
+        onEntrypointLoaded: function (engineInitializer) {
+          engineInitializer.initializeEngine().then(function (appRunner) {
             appRunner.runApp();
           });
         }
@@ -59,4 +79,5 @@
     });
   </script>
 </body>
+
 </html>
