--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <!-- Dynamic base href for GitHub Pages compatibility -->
-  <base href="/">
+  // <base href="/">
   <script>
     (function () {
       var path = window.location.pathname;
