--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
   -->
   <!-- Dynamic base href for GitHub Pages compatibility -->
   //
-  <base href="/drivemate/">
+  <!--<base href="/drivemate/"> -->
   <script>
     (function () {
       var path = window.location.pathname;
