Update web config

--- a/web/index.html
+++ b/web/index.html
@@ -16,8 +16,8 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <!-- Dynamic base href for GitHub Pages compatibility -->
-  //
-  <base href="/drivemate/">
+  
+  <base href="/">
   <script>
     (function () {
       var path = window.location.pathname;
